- Added DTO's, custom exceptions, GlobalExceptionHandler and mapper - Refactored services, controllers and SecurityConfig