@@ -1,125 +1,73 @@
 package com.danialrekhman.productservicenocturne.controller;
 
-import com.danialrekhman.productservicenocturne.dto.ProductCreateUpdateDTO;
-import com.danialrekhman.productservicenocturne.dto.ProductDTO;
-import com.danialrekhman.productservicenocturne.dto.ProductImageDTO;
-import com.danialrekhman.productservicenocturne.model.Category;
+import com.danialrekhman.productservicenocturne.dto.ProductRequestDTO;
+import com.danialrekhman.productservicenocturne.dto.ProductResponseDTO;
+import com.danialrekhman.productservicenocturne.mapper.ProductMapper;
 import com.danialrekhman.productservicenocturne.model.Product;
 import com.danialrekhman.productservicenocturne.service.ProductService;
-import lombok.AccessLevel;
-import lombok.experimental.FieldDefaults;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/products")
-@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
+@RequiredArgsConstructor
 public class ProductController {
 
-    ProductService productService;
-
-    public ProductController(ProductService productService) {
-        this.productService = productService;
-    }
+    private final ProductService productService;
+    private final ProductMapper productMapper;
 
     @GetMapping("/{productId}")
-    public ResponseEntity<ProductDTO> getProductById(@PathVariable Long productId) {
-
-        return productService.getProductById(productId)
-                .map(this::toDTO)
-                .map(ResponseEntity::ok)
-                .orElse(ResponseEntity.notFound().build());
+    public ResponseEntity<ProductResponseDTO> getProductById(@PathVariable Long productId) {
+        Product product = productService.getProductById(productId);
+        if (product == null) return ResponseEntity.notFound().build();
+        return ResponseEntity.ok(productMapper.toDto(product));
     }
 
     @GetMapping("/search/{keyword}")
-    public ResponseEntity<List<ProductDTO>> searchProducts(@PathVariable String keyword) {
-        
+    public ResponseEntity<List<ProductResponseDTO>> searchProducts(@PathVariable String keyword) {
         return ResponseEntity.ok(
-                productService.searchProducts(keyword)
-                .stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList()));
+                productService.searchProducts(keyword).stream()
+                        .map(productMapper::toDto)
+                        .toList());
     }
-    
-    @GetMapping
-    public ResponseEntity<List<ProductDTO>> getAllProducts() {
-        
-        return ResponseEntity.ok(
-                productService.getAllProducts()
-                .stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList()));
 
-    }
-    
-    @GetMapping("/categories/{categoryId}")
-    public ResponseEntity<List<ProductDTO>> getProductsByCategory(@PathVariable Long categoryId) {
-        
+    @GetMapping
+    public ResponseEntity<List<ProductResponseDTO>> getAllProducts() {
         return ResponseEntity.ok(
-                productService.getProductsByCategory(categoryId)
-                        .stream()
-                        .map(this::toDTO)
-                        .collect(Collectors.toList()));
+                productService.getAllProducts().stream()
+                        .map(productMapper::toDto)
+                        .toList());
+    }
+
+    @GetMapping("/categories/{categoryId}")
+    public ResponseEntity<List<ProductResponseDTO>> getProductsByCategory(@PathVariable Long categoryId) {
+        return ResponseEntity.ok(
+                productService.getProductsByCategory(categoryId).stream()
+                        .map(productMapper::toDto)
+                        .toList());
     }
 
     @PostMapping
-    public ResponseEntity<ProductDTO> createProduct(@RequestBody ProductCreateUpdateDTO dto) {
-
-        Product product = productService.createProduct(fromCreateUpdateDTO(dto));
-        return ResponseEntity.status(HttpStatus.CREATED).body(toDTO(product));
+    public ResponseEntity<ProductResponseDTO> createProduct(@RequestBody ProductRequestDTO dto, Authentication authentication) {
+        Product product = productService.createProduct(productMapper.toEntity(dto), authentication);
+        return ResponseEntity.status(HttpStatus.CREATED).body(productMapper.toDto(product));
     }
 
     @PutMapping("/{productId}")
-    public ResponseEntity<ProductDTO> updateProduct(
-            @PathVariable Long productId,
-            @RequestBody ProductCreateUpdateDTO dto) {
-
-        return productService.updateProduct(productId, fromCreateUpdateDTO(dto))
-                .map(this::toDTO)
-                .map(ResponseEntity::ok)
-                .orElse(ResponseEntity.notFound().build());
+    public ResponseEntity<ProductResponseDTO> updateProduct(@PathVariable Long productId,
+                                                            @RequestBody ProductRequestDTO dto, Authentication authentication) {
+        Product updated = productService.updateProduct(productId, productMapper.toEntity(dto), authentication);
+        return ResponseEntity.ok(productMapper.toDto(updated));
     }
 
     @DeleteMapping("/{productId}")
-    public ResponseEntity<Void> deleteProduct(@PathVariable Long productId) {
-
-        productService.deleteProduct(productId);
+    public ResponseEntity<Void> deleteProduct(@PathVariable Long productId, Authentication authentication) {
+        productService.deleteProduct(productId, authentication);
         return ResponseEntity.noContent().build();
-    }
-
-    //Mappers
-
-    private ProductDTO toDTO(Product product) {
-        return ProductDTO.builder()
-                .id(product.getId())
-                .name(product.getName())
-                .description(product.getDescription())
-                .price(product.getPrice())
-                .categoryId(product.getCategory().getId())
-                .categoryName(product.getCategory().getName())
-                .images(product.getImages().stream()
-                        .map(img -> ProductImageDTO.builder()
-                                .id(img.getId())
-                                .imageUrl(img.getImageUrl())
-                                .build())
-                        .collect(Collectors.toList()))
-                .build();
-    }
-
-    private Product fromCreateUpdateDTO(ProductCreateUpdateDTO dto) {
-        Product product = new Product();
-        product.setName(dto.getName());
-        product.setDescription(dto.getDescription());
-        product.setPrice(dto.getPrice());
-
-        Category category = new Category();
-        category.setId(dto.getCategoryId());
-        product.setCategory(category);
-
-        return product;
     }
 }
